import javax.tools.JavaCompiler

plugins {
    id 'java'
    id 'org.springframework.boot' version '2.3.1.RELEASE'
    id "io.spring.dependency-management" version "1.0.6.RELEASE"
}

java{
    sourceCompatibility=JavaVersion.VERSION_14
    targetCompatibility=JavaVersion.VERSION_14
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation('org.springframework.boot:spring-boot-starter-web')
//    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
    compile group: 'org.springframework.boot' ,name:'spring-boot-starter-validation'
    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.71'
    testCompile group:'org.springframework.boot' ,name:'spring-boot-starter-test'

}

//tasks.withType(JavaCompile) {
//    options.compilerArgs += "--enable-preview"
//}
//tasks.withType(Test) {
//    jvmArgs += "--enable-preview"
//}
//tasks.withType(JavaExec) {
//    jvmArgs += "--enable-preview"
//}